--- a/templates/channels/types/instagram/refresh_token.haml
+++ b/templates/channels/types/instagram/refresh_token.haml
@@ -64,7 +64,7 @@
           }
 
         },
-        {scope: 'instagram_basic,instagram_manage_messages,pages_manage_metadata,pages_show_list,pages_read_engagement,pages_messaging'});
+        {scope: 'instagram_basic,instagram_manage_messages,pages_manage_metadata,pages_messaging,pages_read_engagement,pages_show_list'});
 
       })
     });
