--- a/static/fonts/icons/style.css
+++ b/static/fonts/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'temba';
-  src:  url('fonts/temba.eot?m51sn0');
-  src:  url('fonts/temba.eot?m51sn0#iefix') format('embedded-opentype'),
-    url('fonts/temba.ttf?m51sn0') format('truetype'),
-    url('fonts/temba.woff?m51sn0') format('woff'),
-    url('fonts/temba.svg?m51sn0#temba') format('svg');
+  src:  url('fonts/temba.eot?kyypz2');
+  src:  url('fonts/temba.eot?kyypz2#iefix') format('embedded-opentype'),
+    url('fonts/temba.ttf?kyypz2') format('truetype'),
+    url('fonts/temba.woff?kyypz2') format('woff'),
+    url('fonts/temba.svg?kyypz2#temba') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-slack:before {
+  content: "\e922";
+}
 .icon-instagram:before {
   content: "\e900";
 }
