--- a/templates/smartmin/users/user_update.haml
+++ b/templates/smartmin/users/user_update.haml
@@ -1,22 +1,23 @@
 -extends "smartmin/update.html"
-
 -load smartmin i18n temba
 
-- block pre-form
-  .pull-right
-    %a.btn.btn-alert.delete
-      -with user.get_owned_orgs as orgs
-        -if orgs
-          -trans "Delete "
-          -for org in orgs
-            %span.org
-              {{org.name}}{{forloop|oxford}}
-        -else
-          -trans "Delete"
+-block pre-form
+  .page-header
+    .float-right
+      %a.btn.btn-alert.delete
+        -with user.get_owned_orgs as orgs
+          -if orgs
+            -trans "Delete "
+            -for org in orgs
+              %span.org
+                {{org.name}}{{forloop|oxford}}
+          -else
+            -trans "Delete"
+    .page-title
+      -trans "Update Login"
 
-- block post-form
-
-  - with user.get_owned_orgs as orgs
+-block post-form
+  -with user.get_owned_orgs as orgs
     .deletion.hide
       .title
         -if orgs
@@ -25,7 +26,7 @@
           -trans "Delete Login"
 
       .body
-        - with user.get_owned_orgs as orgs
+        -with user.get_owned_orgs as orgs
           -if orgs
             .delete-warning
               .attn
@@ -44,7 +45,7 @@
 
     %a#delete-form.posterize{href:'{% url "orgs.user_delete" user.id %}?delete=true'}
 
-- block extra-script
+-block extra-script
   :javascript
 
     $(document).ready(()=>{
@@ -60,23 +61,9 @@
       });
     });
 
-- block extra-style
+-block extra-style
   {{block.super}}
   :css
-
-    .attn {
-      font-weight: 500;
-    }
-
     .delete-warning {
       margin-top: 10px;
     }
-
-    .form-horizontal .controls {
-      margin-left: 160px;
-    }
-
-    .controls #id_groups {
-      margin-left: 0px;
-    }
-
