Use Contact.get_scheduled for contact read page too

--- a/templates/contacts/contact_read.haml
+++ b/templates/contacts/contact_read.haml
@@ -193,25 +193,24 @@
         -if forloop.counter0 == upcoming_events|length|add:-3
           %tbody.next_three
 
-        %tr.item{class:"{% if evt.event_type == 'M' %}msg{%else%}non-msg{%endif%}"}
+        %tr.item{class:"{% if evt.type == 'message' %}msg{%else%}non-msg{%endif%}"}
           %td.icon
-            -if evt.event_type == 'M'
+            -if evt.type == 'message'
               %span.glyph.icon-bubble-right
-            -elif evt.event_type == 'F'
+            -elif evt.type == 'flow'
               %span.glyph.icon-flow
             -else
               %span.glyph.icon-clock
 
           %td.details.w-full
-
             .activity-scheduled
-              -if evt.event_type == 'M'
+              -if evt.type == 'message'
                 .activity-body
                   {{evt.message}}
 
-              -elif evt.event_type == 'F'
+              -elif evt.type == 'flow'
                 -trans "Start"
-                %a.href{ href: "{% url 'flows.flow_editor' evt.flow_uuid %}" }= evt.flow_name
+                %a.href{ href: "{% url 'flows.flow_editor' evt.flow.uuid %}" }= evt.flow.name
           %td.whitespace-nowrap.text-right
             .pr-6
               {{ evt.scheduled|naturaltime }}
