--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -726,6 +726,7 @@
 -block temba-store
   %temba-store(
     completion="/mr/docs/{{ LANGUAGE_CODE }}/editor.json"
+    languages="/org/languages/"
     fields="/api/v2/fields.json"
     globals="/api/v2/globals.json"
     groups="/api/v2/groups.json")
