--- a/templates/contacts/contact_read_spa.haml
+++ b/templates/contacts/contact_read_spa.haml
@@ -1,7 +1,84 @@
 -extends "contacts/contact_read.html" 
+-load i18n
 
+-block extra-style
+  {{block.super}}
+  :css
+    html {
+      overflow-y: hidden !important;
+    }
+
+-block extra-script
+  :javascript
+    function contactUpdated() {
+      var groups = document.querySelector("temba-contact-groups");
+      groups.refresh();
+    }
+
+    function handleContactRefreshed(evt) {
+      var contact = evt.detail.data;
+      var tabs = document.querySelector("temba-tabs");
+
+      // update our set field count
+      var fields = Object.keys(contact.fields).filter(function (key) {
+        return !!contact.fields[key]
+      });
+
+      var fieldTab = tabs.getTab(1);
+      fieldTab.count = fields.length;
+
+      // render our tabs
+      tabs.requestUpdate();
+
+      var store = document.querySelector("temba-store");
+      
+      var pinned = document.querySelector(".pinned-fields");
+      var all = document.querySelector(".all-fields");
+
+      var pinnedCount = store.getPinnedFields().length;
+      var fieldCount = Object.keys(contact.fields).length;
+      
+      pinned.classList.toggle("hidden", pinnedCount == 0);
+      all.classList.toggle("hidden", fieldCount == 0);
+
+      document.querySelector(".no-fields").classList.toggle("hidden", fieldCount > 0);
+
+    }
+
+    function handleTabChanged() {
+      var tab = document.querySelector("temba-tabs").index;
+      window.history.replaceState(null, null, "?tab=" + tab);
+    }
+
+    function handleFieldSearch(evt) {
+      fetchURL("/contact/?search=" + encodeURIComponent(evt.detail.key) + "+%3D+" + encodeURIComponent("\"" + evt.detail.value + "\""))
+    }
+
+-block spa-title
+  %temba-contact-name(contact="{{object.uuid}}" -temba-refreshed="handleContactRefreshed")
+  
 -block subtitle
+  .summary.-mt-2
+    %temba-contact-groups(contact="{{object.uuid}}")
+
 -block content
-  %temba-tabs.flex-grow
+  
+  %temba-tabs.flex-grow.mt-4(-temba-context-changed="handleTabChanged" index="{{request.GET.tab}}")
     %temba-tab(icon="message-square" name="Chat")
       %temba-contact-chat(contact="{{object.uuid}}" monitor="true")
+
+    %temba-tab(icon="grid" name="Fields")
+      .flex.flex-grow.flex-col.p-4.overflow-y-scroll
+
+        .no-fields.p-16.text-center.hidden
+          .text-xl.mb-4
+            -trans "No Fields"
+          
+          -blocktrans trimmed
+            Nothing to see here yet. Create a new field to save data to your contacts.
+
+        %temba-contact-fields.pinned-fields.pb-4(contact="{{object.uuid}}" pinned="true" -temba-button-clicked="handleFieldSearch")
+        %temba-contact-fields.all-fields(contact="{{object.uuid}}" -temba-button-clicked="handleFieldSearch")
+
+    %temba-tab(icon="campaign" name="Pending")
+    %temba-tab(icon="agent" name="Tickets")
