--- a/templates/spa_page_menu.haml
+++ b/templates/spa_page_menu.haml
@@ -80,8 +80,9 @@
     var link = evt.target;
     var href = link.getAttribute("data-href");
     var modax = link.getAttribute("data-modax");
+    var onSubmit = link.getAttribute("data-on-submit");
     if (modax) {
-      showModax(modax, href);
+      showModax(modax, href, onSubmit);
     } else {
       if (href) {
         fetchURL(href);
@@ -108,7 +109,7 @@
   -if gear_links
     .flex.h-full.spa-gear-buttons
       -with link=gear_links|first
-        %temba-button.ml-4(name="{{link.title|escapejs}}" onclick="handleMenuClicked(event)" class='{{ link|gear_link_classes }}' data-success-url='{{ link.success_url }}' data-href='{{link.href}}' data-modax='{{link.modax|escapejs}}')
+        %temba-button.ml-4(name="{{link.title|escapejs}}" onclick="handleMenuClicked(event)" class='{{ link|gear_link_classes }}' data-success-url='{{ link.success_url }}' data-href='{{link.href}}' data-modax='{{link.modax|escapejs}}' data-on-submit='{{link.on_submit|escapejs}}')
  
       -if gear_links|length > 1
         %temba-dropdown.items-stretch.flex.flex-column(arrowoffset="-12" offsetx="24" offsety="6" arrowsize="8")
@@ -117,7 +118,7 @@
           .dropdown.px-6.py-4.text-gray-800.z-50(slot="dropdown" style="min-width:200px")
             -for link in gear_links
               -if not forloop.first
-                .whitespace-nowrap.menu-item.hover-linked.font-normal{onclick:'handleMenuClicked(event)', class:'{{ link|gear_link_classes }}', data-success-url:'{{ link.success_url }}', data-href:'{{link.href}}', data-modax: '{{link.modax|escapejs}}'}
+                .whitespace-nowrap.menu-item.hover-linked.font-normal{onclick:'handleMenuClicked(event)', class:'{{ link|gear_link_classes }}', data-success-url:'{{ link.success_url }}', data-href:'{{link.href}}', data-modax: '{{link.modax|escapejs}}', data-on-submit:'{{link.on_submit|escapejs}}'}
                   {{link.title}}
                   %span{class:'gear-flag'}
                     {{link.flag}}
