Include scheduled triggers in upcoming contact events

--- a/templates/contacts/contact_read.haml
+++ b/templates/contacts/contact_read.haml
@@ -221,6 +221,8 @@
                   -trans 'repeats daily'
                 -elif evt.repeat_period == 'W'
                   -trans 'repeats weekly'
+                -elif evt.repeat_period == 'M'
+                  -trans 'repeats monthly'
 
     -if upcoming_events|length > 3
       %a.pull-right.show-all.upcoming
