--- a/templates/contacts/contact_read_spa.haml
+++ b/templates/contacts/contact_read_spa.haml
@@ -15,6 +15,15 @@
       groups.refresh();
     }
 
+    function handlePendingRefreshed(evt) {
+      var pendingEvents = evt.detail.data;
+      
+      var tabs = document.querySelector("temba-tabs");
+      var pendingTab = tabs.getTab(2);
+      pendingTab.count = pendingEvents.length;
+      tabs.requestUpdate();
+    }
+
     function handleContactRefreshed(evt) {
       var contact = evt.detail.data;
       var tabs = document.querySelector("temba-tabs");
@@ -38,11 +47,12 @@
       var pinnedCount = store.getPinnedFields().length;
       var fieldCount = Object.keys(contact.fields).length;
       
-      pinned.classList.toggle("hidden", pinnedCount == 0);
-      all.classList.toggle("hidden", fieldCount == 0);
+      // pinned.classList.toggle("hidden", pinnedCount == 0);
+      all.classList.toggle("hidden", pinnedCount > 0 && fieldCount-pinnedCount === 0);
 
-      document.querySelector(".no-fields").classList.toggle("hidden", fieldCount > 0);
-
+      // if our contact refershes, refresh our pendingEvents
+      var pending = document.querySelector("temba-contact-pending");
+      pending.refresh();
     }
 
     function handleTabChanged() {
@@ -64,21 +74,30 @@
 -block content
   
   %temba-tabs.flex-grow.mt-4(-temba-context-changed="handleTabChanged" index="{{request.GET.tab}}")
-    %temba-tab(icon="message-square" name="Chat")
+    %temba-tab(icon="message-square" name='{{_("Chat")|escapejs}}')
       %temba-contact-chat(contact="{{object.uuid}}" monitor="true")
 
-    %temba-tab(icon="grid" name="Fields")
-      .flex.flex-grow.flex-col.p-4.overflow-y-scroll
-
-        .no-fields.p-16.text-center.hidden
-          .text-xl.mb-4
-            -trans "No Fields"
-          
-          -blocktrans trimmed
-            Nothing to see here yet. Create a new field to save data to your contacts.
-
+    %temba-tab(icon="grid" name='{{_("Fields")|escapejs}}')
+      .flex.flex-grow.flex-col.p-4.overflow-y-auto
         %temba-contact-fields.pinned-fields.pb-4(contact="{{object.uuid}}" pinned="true" -temba-button-clicked="handleFieldSearch")
-        %temba-contact-fields.all-fields(contact="{{object.uuid}}" -temba-button-clicked="handleFieldSearch")
 
-    %temba-tab(icon="campaign" name="Pending")
-    %temba-tab(icon="agent" name="Tickets")
+        %temba-contact-fields.all-fields(contact="{{object.uuid}}" -temba-button-clicked="handleFieldSearch")
+          .no-fields.p-16.text-center(slot="empty")
+            .text-xl.mb-4
+              -trans "No Fields"
+
+            -blocktrans trimmed
+              Nothing to see here yet. Create a new field to save data to your contacts.
+
+    %temba-tab(icon="campaign" name='{{_("Next Up")|escapejs}}')
+      .flex.flex-grow.flex-col.p-4.overflow-y-auto
+        %temba-contact-pending(contact="{{object.uuid}}" -temba-refreshed="handlePendingRefreshed")
+
+          .no-pending.p-16.text-center(slot="empty")
+            .text-xl.mb-4
+              -trans "No Upcoming Events"
+
+            -blocktrans trimmed
+              Nothing to see here yet. Any messages or flows scheduled to be sent to this contact in the future will be shown here.
+
+    %temba-tab(icon="agent" name='{{_("Tickets")|escapejs}}')
