--- a/templates/channels/types/facebookapp/claim.haml
+++ b/templates/channels/types/facebookapp/claim.haml
@@ -68,31 +68,44 @@
   {{ block.super }}
 
   :javascript
+    $("#fb-channel-options").on('click', ".fb-page-channel-option", function(e){
+      $("#user-access-token").val($(this).data("fb-access-token"));
+      $("#page-id").val($(this).data("fb-id"));
+      $("#page-name").val($(this).data("fb-name"));
+      $("#claim-form").submit();
+    });
+
+
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId      : '{{ facebook_app_id }}',
+        cookie     : true,
+        xfbml      : true,
+        version    : 'v12.0'
+      });
+    };
+
+
+    (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "https://connect.facebook.net/en_US/sdk.js";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+
     $(document).ready(function(){
       $(".connect-facebook").click(function(evt){
-        location.replace("https://www.facebook.com/v12.0/dialog/oauth?client_id={{ facebook_app_id }}&redirect_uri=" + window.location.origin + window.location.pathname + "&scope=pages_messaging,pages_show_list,pages_manage_metadata,pages_read_engagement&response_type=token")
+        $("#throbber").show();
+        FB.login(function(response) {
+          if (response.status === 'connected') {
+            $("#fb-user-id").val(response.authResponse.userID);
+            getFBPages(response.authResponse.accessToken);
+          }
+        }, 
+        {scope: 'pages_messaging,pages_show_list,pages_manage_metadata,pages_read_engagement'});
 
-      });
-
-      var hash = window.location.hash.substring(1)
-      var result = hash.split('&').reduce(function (res, item) {
-        var parts = item.split('=');
-        res[parts[0]] = parts[1];
-        return res;
-      }, {});
-
-      var accessToken = result.long_lived_token || result.access_token;
-      if (accessToken) {
-        getFBPages(accessToken);
-      }
-
-      $("#fb-channel-options").on('click', ".fb-page-channel-option", function(e){
-        $("#user-access-token").val($(this).data("fb-access-token"));
-        $("#page-id").val($(this).data("fb-id"));
-        $("#page-name").val($(this).data("fb-name"));
-        $("#claim-form").submit();
-      });
-    
+      })
     });
 
     function getFBPages(token) {
