Add ticket link on contact spa page

--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -27,7 +27,7 @@
             window.location = newUrl;
           } else { 
             if (force) {
-              window.location = "/messages";
+              window.location = "/messages/";
             }
           }
         }
