--- a/templates/tickets/ticket_list.haml
+++ b/templates/tickets/ticket_list.haml
@@ -195,7 +195,7 @@
     }
 
     function handleTicketsRefreshed(event) {
-      var menu = document.querySelector('temba-menu');
+      // var menu = document.querySelector('temba-menu');
       var tickets = event.target;
 
       // tell our chat to refresh since we know things are new in our list
@@ -211,7 +211,7 @@
         empty.style.opacity = '1';
       }
 
-      menu.refresh();
+      // menu.refresh();
     }
 
     function removeTicket(uuid) {
@@ -261,7 +261,7 @@
         tickets.refresh();
       }
 
-      menu.refresh();
+      // menu.refresh();
     }
 
 -block page-container
