--- a/static/css/temba-components.css
+++ b/static/css/temba-components.css
@@ -98,6 +98,8 @@ html {
   --color-warning-border: rgb(251, 246, 176);
 
   --color-error: rgb(var(--error-rgb));
+  --color-alert: rgb(var(--error-rgb));
+
   --font-size: 14px;
   --button-font-size: 1.125rem;
 
