--- a/templates/contacts/contact_read_spa.haml
+++ b/templates/contacts/contact_read_spa.haml
@@ -8,6 +8,14 @@
       overflow-y: hidden !important;
     }
 
+    temba-contact-tickets {
+      font-size: 1.1em;
+    }
+
+    temba-contact-tikets:hover {
+      background: pink !important;
+    }
+
 -block extra-script
   :javascript
     function contactUpdated() {
@@ -55,6 +63,12 @@
       pending.refresh();
     }
 
+    function handleTicketsRefreshed(evt) {
+      var openTickets = evt.detail.data.filter(function (ticket) { 
+        return ticket.status === "open"
+      });      
+    }
+
     function handleTabChanged() {
       var tab = document.querySelector("temba-tabs").index;
       window.history.replaceState(null, null, "?tab=" + tab);
@@ -66,21 +80,23 @@
 
 -block spa-title
   %temba-contact-name(contact="{{object.uuid}}" -temba-refreshed="handleContactRefreshed")
-  
+
 -block subtitle
   .summary.-mt-2
     %temba-contact-groups(contact="{{object.uuid}}")
-
+    
 -block content
-  
+
   %temba-tabs.flex-grow.mt-4(-temba-context-changed="handleTabChanged" index="{{request.GET.tab}}")
     %temba-tab(icon="message-square" name='{{_("Chat")|escapejs}}')
-      %temba-contact-chat(contact="{{object.uuid}}" monitor="true")
+      %temba-contact-tickets.absolute.m-6.z-10(contact="{{object.uuid}}" -temba-refreshed="handleTicketsRefreshed")
+
+      .flex.flex-grow.flex-col.overflow-y-auto(style="border-top-right-radius: var(--curvature);")
+        %temba-contact-chat(contact="{{object.uuid}}" monitor="true")
 
     %temba-tab(icon="grid" name='{{_("Fields")|escapejs}}')
-      .flex.flex-grow.flex-col.p-4.overflow-y-auto
+      .flex.flex-grow.flex-col.p-4.overflow-y-auto(style="border-top-right-radius: var(--curvature);")
         %temba-contact-fields.pinned-fields.pb-4(contact="{{object.uuid}}" pinned="true" -temba-button-clicked="handleFieldSearch")
-
         %temba-contact-fields.all-fields(contact="{{object.uuid}}" -temba-button-clicked="handleFieldSearch")
           .no-fields.p-16.text-center(slot="empty")
             .text-xl.mb-4
@@ -90,7 +106,7 @@
               Nothing to see here yet. Create a new field to save data to your contacts.
 
     %temba-tab(icon="campaign" name='{{_("Next Up")|escapejs}}')
-      .flex.flex-grow.flex-col.p-4.overflow-y-auto
+      .flex.flex-grow.flex-col.p-4.overflow-y-auto(style="border-top-right-radius: var(--curvature);")
         %temba-contact-pending(contact="{{object.uuid}}" -temba-refreshed="handlePendingRefreshed")
 
           .no-pending.p-16.text-center(slot="empty")
@@ -98,6 +114,4 @@
               -trans "No Upcoming Events"
 
             -blocktrans trimmed
-              Nothing to see here yet. Any messages or flows scheduled to be sent to this contact in the future will be shown here.
-
-    %temba-tab(icon="agent" name='{{_("Tickets")|escapejs}}')
+              Nothing to see here yet. Any messages or flows scheduled to be sent to this contact in the future will be shown here.  
