tweaks in slack views and test

--- a/templates/channels/types/slack/claim.haml
+++ b/templates/channels/types/slack/claim.haml
@@ -20,5 +20,5 @@
         Fill this form, submit and go redirected to config page.
     %li
       -blocktrans trimmed
-        Copy Request URL from channel config page, go to slack Event Subscriptions page, enable Events, paste Request URL into input field and subscribe to bot events (file_created, message.channels, message.im).
+        Copy Request URL from channel config page, go to slack Event Subscriptions page, enable Events, paste Request URL into input field and subscribe to bot events (file_created, message.im).
         If you need help how to do all this steps, read this guide <a href="https://api.slack.com/authentication/basics">here</a> please.
