--- a/templates/channels/channel_claim.haml
+++ b/templates/channels/channel_claim.haml
@@ -11,6 +11,18 @@
     Android phone and your own cell phone plan, or we can connect you with a service provider in your country
     directly.
 
+  -if total_count >= total_limit
+    .mb-4
+      %temba-alert(level="warning")
+        -blocktrans trimmed with limit=total_limit
+          You have reached the limit of {{ limit }} channels per workspace. Please remove channels that you are no longer using.
+  -elif total_count >= total_limit|add:-1
+    .mb-4
+      %temba-alert(level="warning")
+        -blocktrans trimmed with limit=total_limit
+          You are approaching the limit of {{ limit }} channels per workspace. You should remove channels that you are no longer using.
+
+
   .channel-options.mt-8
     .title
       -trans "Recommendations"
