Use system user to make request to add system user to WABA

--- a/templates/orgs/org_whatsapp_cloud_connect.haml
+++ b/templates/orgs/org_whatsapp_cloud_connect.haml
@@ -70,7 +70,7 @@
           console.log('User cancelled login or did not fully authorize.');
         }
       }, {
-        scope: 'business_management,whatsapp_business_management',
+        scope: 'business_management,whatsapp_business_management,whatsapp_business_messaging',
         extras: {
           feature: 'whatsapp_embedded_signup',
           setup: {
