--- a/templates/channels/types/slack/claim.haml
+++ b/templates/channels/types/slack/claim.haml
@@ -3,22 +3,21 @@
 
 -block pre-form
   -blocktrans trimmed with name=brand.name
-    You can connect a <a href="https://slack.com/app">Slack</a> Bot to your {{name}} workspace to automate sending and receiving messages.
+    You can connect a <a href="https://slack.com/app" target="_blank">Slack</a> Bot to your {{name}} workspace to automate sending and receiving messages.
 
   -blocktrans trimmed
     To do it, you will need to create a new slack app and configure it.
 
+  -blocktrans trimmed
+    If you want to better understand these steps, read this guide <a href="https://api.slack.com/authentication/basics" target="_blank">here</a> please.
+
   %ol.steps.card
     %li
       -blocktrans trimmed
-        You'll need to create a <a href="https://api.slack.com/apps">Slack App</a> if you haven't already.
+        You'll need to create a <a href="https://api.slack.com/apps" target="_blank">Slack App</a> if you haven't already.
     %li
       -blocktrans trimmed
         Setup a bot to your Slack App, add the needed scopes for Bot Token (chat:write, files:read, files:write, users:read), User Token (files:read and files:write) and install app on your slack workspace.
     %li
       -blocktrans trimmed
-        Fill this form, submit and go redirected to config page.
-    %li
-      -blocktrans trimmed
-        Copy Request URL from channel config page, go to slack Event Subscriptions page, enable Events, paste Request URL into input field and subscribe to bot events (file_created, message.im).
-        If you need help how to do all this steps, read this guide <a href="https://api.slack.com/authentication/basics">here</a> please.
+        Fill this form, submit and go redirected to new channel's configuration to finish connection.
