add logo to redirect page

--- a/templates/weni/redirect.haml
+++ b/templates/weni/redirect.haml
@@ -25,11 +25,21 @@
   %body
     #redirect-splash
       %div.rbackground
+      %div.rlogo
+        %a{href:"https://dash.weni.ai"}
+          %img{src:"/sitestatic/brands/push/logo-weni.png",width:84, height:24}
+
       %div.rinfo
         %div.rtitle
-          Este link não está mais disponível
+          Este página não está mais disponível
         %div.rdesc
-          Agora você acessa seus projetos em
+          Agora você acessa seus projetos através da plataforma
           %a{href:"https://dash.weni.ai"}
             https://dash.weni.ai
+        %br
+        %div.rdesc
+          Em caso de dúvidas, entre em contato conosco através do e-mail
+          %br
+          %a{href:"suporte@weni.ai"}
+            suporte@weni.ai
   
