fix redirect mailto:suporte@weni.ai

--- a/templates/weni/redirect.haml
+++ b/templates/weni/redirect.haml
@@ -40,6 +40,6 @@
         %div.rdesc
           Em caso de dúvidas, entre em contato conosco através do e-mail
           %br
-          %a{href:"suporte@weni.ai"}
+          %a{href:"mailto:suporte@weni.ai"}
             suporte@weni.ai
   
