--- a/templates/contacts/contact_list.haml
+++ b/templates/contacts/contact_list.haml
@@ -187,6 +187,13 @@
                               .mr-2.glyph.icon-bubble-3(style="font-size:14px")
                               -trans "Send"
 
+                        -if org_perms.msgs.broadcast_send and not reply_disabled
+                          %temba-modax#start-flow(header='{{_("Start Flow")|escapejs}}' endpoint="{% url 'flows.flow_broadcast' %}")
+                            .button-action.no-loading(onclick="handleStartFlowClicked()")
+                              .mr-2.glyph.icon-flow(style="font-size:14px")
+                              -trans "Start Flow"
+      
+
                   .flex-grow.ml-1.self-end.items-end
                     .flex.flex-col.pr-12
                       .page-title.leading-tight
@@ -286,10 +293,21 @@
         {% endif %}
       }
 
+      function handleStartFlowClicked() {
+        // when we click send, include any clicked messages in our modax request
+        var sendEndpoint = "{% url 'flows.flow_broadcast' %}";
+        var startModal = document.querySelector("#start-flow");
+        var ids = getCheckedUuids();
+        if (ids.length > 0) {
+          startModal.setAttribute("endpoint", sendEndpoint + '?c=' + ids);
+        } else {
+          startModal.setAttribute("endpoint", sendEndpoint);
+        }
+      }
+
       function handleSendMessageClicked() {
         // when we click send, include any clicked messages in our modax request
         var sendEndpoint = "{% url 'msgs.broadcast_send' %}";
-        var sendButton = document.querySelector(".send-button");
         var sendModal = document.querySelector("#send-message-modal");
         var ids = getCheckedUuids();
         if (ids.length > 0) {
