--- a/templates/gear_links_include.haml
+++ b/templates/gear_links_include.haml
@@ -43,7 +43,7 @@
 
           -else
             -if link.js_class
-              .button-light{onclick:'{%if link.on_click%}{{link.on_click}}{% else %}void(0);{%endif%}', class:'{{ link|gear_link_classes:True }}', data-success-url:'{{ link.success_url }}'}
+              .button-light{onclick:'{%if link.on_click%}{{link.on_click}}{% else %}void(0);{%endif%}', href:'{{link.href}}', class:'{{ link|gear_link_classes:True }}', data-success-url:'{{ link.success_url }}'}
                 {{link.title}}
 
             -else
