Tweak wording on skip inactive

--- a/templates/utils/forms/contact_search.haml
+++ b/templates/utils/forms/contact_search.haml
@@ -10,7 +10,7 @@
   <temba-checkbox 
     name="not_seen_since_days" 
     label='{{_("Skip inactive contacts")|escapejs}}'
-    help_text='{{_("Target contacts who have sent a message in the last 90 days.")|escapejs}}'
+    help_text='{{_("Only include contacts who have sent a message in the last 90 days.")|escapejs}}'
   ></temba-checkbox>
 
   <temba-checkbox 
