Fix spa history bug and some minor tweaks for release screenshots

--- a/templates/flows/flow_editor_spa.haml
+++ b/templates/flows/flow_editor_spa.haml
@@ -8,6 +8,11 @@
       padding: 0;
     }
 
+    .spa-title {
+      margin-bottom: 0;
+      padding: 1em;
+    }
+
     .more .submenu {
       top: 2.5em !important;
       right: 0.5em !important;
@@ -22,7 +27,6 @@
       overflow: auto;
       z-index: 0;
       border: 1px solid #e7e7e7;
-      border-radius: var(--curvature);
     }
 
     #simulator-tab {
